alignment fixed

--- a/src/assets/scss/portfolio/_portfolio.scss
+++ b/src/assets/scss/portfolio/_portfolio.scss
@@ -71,7 +71,7 @@
         position: relative;
 
         // 
-        padding-left: 13.4rem;
+        padding-left: 14.5rem;
     padding-right: 39rem;
 
         .row-div{
